[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "PyBERT"
description = "Serial communication link bit error rate tester simulator, written in Python."
version = "3.5.8"
authors = [{name = "David Banas", email = "capn.freako@gmail.com"}]
urls = { documentation = "https://github.com/capn-freako/PyBERT/wiki"}
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD"}
dependencies = [
        "chaco==5.1.0",
        "click==8.1.3",
        "enable==5.3.1",
        "numpy==1.23.3",
        "scikit-rf==0.23.1",
        "scipy==1.9.2",
        "traits==6.4.1",
        "traitsui==7.4.1",
        "PyIBIS-AMI>=3.5.7",
        "pyyaml==6.0",
        "pyside2==5.15.2.1",
]
keywords=["bert", "communication", "simulator"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Telecommunications Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Adaptive Technologies",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: System :: Emulators",
    "Topic :: System :: Networking",
    "Topic :: Utilities"
]

[project.scripts]
pybert = "pybert.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 119

[tool.isort]
profile = "black"

[tool.docformatter]
wrap-summaries = 0

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-vv"
xfail_strict=true

[tool.pylint.master]
fail-under = 9.0

[tool.pylint.messages_control]
disable = [
    "invalid-name",
    "line-too-long",
]

[tool.pylint.format]
max-line-length = 119

[tool.pydocstyle]
ignore = [
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
]

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "skrf.*",
    "chaco.*",
    "enable.*",
    "pyface.*",
    "traits.*",
    "traitsui.*"
]
ignore_missing_imports = true
