[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "PipBERT"
description = "Serial communication link bit error rate tester simulator, written in Python."
version = "4.1.0"
authors = [ {name = "David Banas",     email = "capn.freako@gmail.com"}
          , {name = "David Patterson"}
          ]
urls = { documentation = "https://github.com/capn-freako/PyBERT/wiki"}
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD"}
dependencies = [
        "PyIBIS-AMI>=4.1",
        "pyside2",
        "pyyaml>=6",
        "scikit-rf>=0.24",
]
keywords=["bert", "communication", "simulator"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Telecommunications Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Adaptive Technologies",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: System :: Emulators",
    "Topic :: System :: Networking",
    "Topic :: Utilities"
]

[project.scripts]
pybert = "pybert.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 119

[tool.isort]
profile = "black"

[tool.docformatter]
wrap-summaries = 0

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-vv --durations=3"
xfail_strict=true

[tool.pylint.master]
fail-under = 9.0

[tool.pylint.messages_control]
disable = [
    "invalid-name",
    "line-too-long",
]

[tool.pylint.format]
max-line-length = 119

[tool.pydocstyle]
ignore = [
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
]

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "skrf.*",
    "chaco.*",
    "enable.*",
    "pyface.*",
    "traits.*",
    "traitsui.*"
]
ignore_missing_imports = true
