[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pipbert"
description = "Serial communication link bit error rate tester simulator, written in Python."
version = "8.1.0"
authors = [ {name = "David Banas",     email = "capn.freako@gmail.com"}
          ]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "enable>=6.1.0",
    "kiwisolver",
    "pyibis-ami>=7.2.3",
    "pyside6<6.7",
    "pyyaml>=6",
    "scikit-rf>=0.29",
    "typing_extensions",
]
keywords=["bert", "communication", "simulator"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Telecommunications Industry",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Adaptive Technologies",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: System :: Emulators",
    "Topic :: System :: Networking",
    "Topic :: Utilities"
]

[project.urls]
Wiki = "https://github.com/capn-freako/PyBERT/wiki"
Installation = "https://github.com/capn-freako/PyBERT/wiki/instant_gratification"
FAQ = "https://github.com/capn-freako/PyBERT/wiki/pybert_faq"
GitHub = "https://github.com/capn-freako/PyBERT"
PyPi = "https://pypi.org/project/PipBERT/"

[project.scripts]
pybert = "pybert.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 119

[tool.isort]
# profile = "black"
known_first_party = ["pybert", "pyibisami"]
known_third_party = ["enable", "chaco"]

[tool.docformatter]
wrap-summaries = 0

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-vv --durations=3"
xfail_strict=true

[tool.pylint.master]
fail-under = 9.0

[tool.pylint.messages_control]
disable = [
    "invalid-name",
    "line-too-long",
]

[tool.pylint.format]
max-line-length = 119

[tool.pydocstyle]
ignore = [
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
]

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "skrf.*",
    "chaco.*",
    "enable.*",
    "pyface.*",
    "traits.*",
    "traitsui.*"
]
ignore_missing_imports = true
